test/prism_regression/invalid/constant_path_write_missing_name.rb
# typed: true
# disable-parser-comparison: true

X:: = 1
